[gd_scene load_steps=8 format=3 uid="uid://btjoovlo4qdvo"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_n6ll3"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_rdv5s"]
[ext_resource type="PackedScene" uid="uid://iehhtlpu3ql5" path="res://gun.tscn" id="3_wfhpn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3kd34"]
radius = 45.0111

[sub_resource type="CircleShape2D" id="CircleShape2D_0hv1a"]
radius = 33.8378

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya05y"]
bg_color = Color(0.644966, 0.483088, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4250t"]
bg_color = Color(0.925981, 0.176982, 0.979215, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="jonathan" type="CharacterBody2D"]
script = ExtResource("1_n6ll3")

[node name="HappyBoo" parent="." instance=ExtResource("1_rdv5s")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -50)
shape = SubResource("CircleShape2D_3kd34")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_wfhpn")]
position = Vector2(0, -51)
rotation = -0.0164733

[node name="hurt_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_area"]
position = Vector2(1, -6)
rotation = 1.40469
shape = SubResource("CircleShape2D_0hv1a")
debug_color = Color(0.95812, 0, 0.528873, 0.42)

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -215.0
offset_top = -139.0
offset_right = 220.0
offset_bottom = -109.0
theme_override_styles/background = SubResource("StyleBoxFlat_ya05y")
theme_override_styles/fill = SubResource("StyleBoxFlat_4250t")
value = 100.0
show_percentage = false
